--- a/fizzbuzz/build.gradle
+++ b/fizzbuzz/build.gradle
@@ -14,7 +14,11 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.4.2")
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
 }
 
 compileKotlin {
