--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
 }
 
-group 'com.vijay'
+group 'com.codechallenge'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
