--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'codingchallege'
 include 'binary-tree-avg-node'
+include 'draw-canvas'
+include 'factorial'
+include 'fibonacci-series'
+include 'fizzbuzz'
 include 'leetcoding'
